--- a/QuizApp/QuizApp.WASM/_Imports.razor
+++ b/QuizApp/QuizApp.WASM/_Imports.razor
@@ -12,4 +12,5 @@
 @using QuizApp.Models
 @using MudBlazor
 @using Models;
+@using QuizApp.BlazorWASM.Services.ExamServices
 @using Microsoft.AspNetCore.WebUtilities
