--- a/QuizApp/QuizApp.WASM/Pages/SubmissionResult.razor
+++ b/QuizApp/QuizApp.WASM/Pages/SubmissionResult.razor
@@ -1,50 +1,48 @@
 ﻿@page "/submissionResult"
+@inherits HttpClientErrorHandler
+@inject ExamsClient Client
 @inject NavigationManager NavigationManager
-<div>
-    @if (submission is not null)
+
+<div class="data-latex exam-container d-flex flex-column justify-content-center align-items-center">
+    @if (_exam is not null && _submission is not null)
     {
-        <ScoreView result="@submission.Result"
-                    fullMark="@submission.Choices.Count()"/>
-        <div class="bg-info w-50 m-auto mt-3 m-2 rounded"></div>
-        <ExamView Id="@examId"
-                  submissionName="@submission.SubmissionPersonName"
-                  Choices="@submission.Choices.ToArray()"
-                  Corrected="true" />
+        <h1>Your Result is @_submission.Result</h1>
+        <CascadingValue Value="ExamState">
+            <ExamView
+                />
+        </CascadingValue>
+        <a href="/" class="btn btn-success">Solve More</a>
     }
     else
     {
-        <MudProgressCircular Color="Color.Info"
-                             Indeterminate="true"
-                             Size="Size.Large"
-                             Style="height:30vh;width:30vh;align-self:center;margin-top:15%" />
+        <MudProgressCircular />
     }
 </div>
+
 @code {
     [Parameter]
-    [SupplyParameterFromQuery]
-    public string submissionId { get; set; } = null!;
+    [SupplyParameterFromQuery(Name = "examId")]
+    public string ExamId { get; set; } = string.Empty;
 
     [Parameter]
-    [SupplyParameterFromQuery]
-    public string examId { get; set; } = null!;
+    [SupplyParameterFromQuery(Name = "submissionId")]
+    public string SubmissionId { get; set; } = string.Empty;
 
-    private Submission? submission = null;
-
-    private int result = 0;
     [Inject]
-    public ExamsClient _client { get; set; } = null!;
+    public ExamService ExamState { get; set; } = null;
 
-    protected override async Task OnParametersSetAsync()
+    private Exam? _exam = null!;
+    private Submission? _submission = null!;
+    protected override async Task OnInitializedAsync()
     {
-        submission = await InitializeSubmission();
+        _exam = await Client.GetExamAsync(ExamId);
+        _submission = await Client.GetSubmission(SubmissionId);
+        if(_exam is null || _submission is null)
+        {
+            AddError("Page Not found");
+            return;
+        }
+        ExamState.Initialize(_exam, ExamMode.Corrected,_submission);
     }
 
-    private Task<Submission?> InitializeSubmission()
-    {
-        if (submissionId is not null)
-            return _client.GetSubmission(submissionId);
-        else
-            //return Task with null
-            return Task.FromResult<Submission?>(null);
-    }
 }
