Fixed Mathjax rendering bug

--- a/QuizApp/QuizApp.WASM/Pages/ExamView.razor
+++ b/QuizApp/QuizApp.WASM/Pages/ExamView.razor
@@ -1,5 +1,7 @@
 ﻿@inject IJSRuntime JSRuntime
 @{
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     for (int i = 0; i < Exam.Questions.Count; i++)
     {
         var question = Exam.Questions[i];
