--- a/QuizApp/QuizApp.WASM/_Imports.razor
+++ b/QuizApp/QuizApp.WASM/_Imports.razor
@@ -14,3 +14,6 @@
 @using Models;
 @using QuizApp.BlazorWASM.Services.ExamServices
 @using Microsoft.AspNetCore.WebUtilities
+@using QuizApp.BlazorWASM.Services.HttpClientHandlers
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.AspNetCore.Components.Authorization
