--- a/QuizApp/QuizApp.WASM/Pages/ReadExamPage.razor
+++ b/QuizApp/QuizApp.WASM/Pages/ReadExamPage.razor
@@ -2,6 +2,7 @@
     @inherits HttpClientErrorHandler
     @inject NavigationManager NavigationManager
     @inject ExamsClient Client
+    @attribute [Authorize]
     <div class="d-flex flex-column justify-content-center align-items-center">
         @if(Exam is not null)
         {
