--- a/QuizApp/QuizApp.WASM/_Imports.razor
+++ b/QuizApp/QuizApp.WASM/_Imports.razor
@@ -17,3 +17,4 @@
 @using QuizApp.BlazorWASM.Services.HttpClientHandlers
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
