--- a/QuizApp/QuizApp.WASM/Pages/Home.razor
+++ b/QuizApp/QuizApp.WASM/Pages/Home.razor
@@ -16,8 +16,7 @@ else
     {
         <MudNavLink
             Class="rounded ma-3"
-            Href="@($"submissions/{item.id}")"
-            >
+                    Href="@($"submissions/{item.id}")">
             @item.Name
         </MudNavLink>
     }
