Fixed Submission Bug logic

--- a/QuizApp/QuizApp.WASM/Pages/Home.razor
+++ b/QuizApp/QuizApp.WASM/Pages/Home.razor
@@ -16,7 +16,8 @@ else
     {
         <MudNavLink
             Class="rounded ma-3"
-                    Href="@($"submissions/{item.id}")">
+            Href="@($"ReadExam/{item.id}")"
+            >
             @item.Name
         </MudNavLink>
     }
