--- a/QuizApp/QuizApp.WASM/Pages/Submissions.razor
+++ b/QuizApp/QuizApp.WASM/Pages/Submissions.razor
@@ -16,7 +16,7 @@
                         {
                             <MudListItem>
                                 <MudNavLink
-                                    Href="@UrlHelpers.GetSubmissionLink(exam.id,sub.Id!)"    
+                                    Href="@UrlHelpers.GetSubmissionLink(exam.id,sub.Id!.ToString())"    
                                 >@sub.SubmissionPersonName</MudNavLink>
                             </MudListItem>
                         }
